# Shape-Z

./: Cargo.toml  LICENSE.md  Readme.md  rust.yml
.github/workflows/: release.yml  rust.yml
_src/: editor.rs  main.rs  material_preview.rs  pbr_path.rs  project.rs  sdf2d.rs  sdf3d.rs  shape.rs  tool.rs
_src/_pattern/: value.rs
_src/ui/: navigator.rs  rect.rs
_src/ui/widgets/: browser.rs  int_slider.rs  palettebar.rs  text_button.rs  tool_extrusion.rs  value_list.rs
embedded/tools/: add.rhai  clear_all.rhai  floor.rhai  remove.rhai  resize.rhai  sphere.rhai
src/: _tool.rs  buffer.rs  camera.rs  context.rs  editor.rs  hashes.rs  hitrecord.rs  lib.rs  main.rs  mapeditor.rs  material.rs  material_preview.rs  misc.rs  modeleditor.rs  nodeeditor.rs  object.rs  palette.rs  pattern.rs  project.rs  script.rs  sdf.rs  shape.rs  tile.rs  tool.rs  toollist.rs  ui.rs  utils.rs  value.rs  world.rs
src/_pattern/: mod.rs
src/node/: graph.rs  mod.rs  nodefx.rs
src/pattern/: brick.rs  voronoi.rs
src/sdf3d/: mod.rs
src/tools/: edit.rs  mod.rs
src/ui/: context.rs  navigator.rs  rect.rs
src/ui/widgets/: browser.rs  color_widget.rs  int_slider.rs  mod.rs  modebar.rs  palettebar.rs  settings.rs  shape_selector.rs  switch_button.rs  text_button.rs  tile_editor.rs  tool_extrusion.rs  value_list.rs
src/voxel/: _grid.rs  grid.rs  mod.rs  palette.rs  ray.rs  renderbuffer.rs  tile.rs
src/voxel/camera/: iso.rs  mod.rs  orbit.rs  pinhole.rs
src/voxel/renderer/: editshader.rs  mod.rs  pbr.rs
