[package]
name = "shape-z"
version = "0.1.0"
edition = "2021"
description = "A procedural voxel editor."

[dependencies]
noise = "0.8.1"
rustc-hash = "1.1.0"
rayon = "1.7.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
maths-rs = { version = "0.2", features = ["short_types", "short_hand_constructors", "casts", "serde"] }
theframework = "0.1.0"
#theframework = { path = "../theframework" }
lazy_static = "1.4.0"
rust-embed = { version = "6.4.0", default-features = true, features = ["include-exclude"] }
fontdue = "0.7.2"
png = "0.17.8"
#rhai = { version = "1.13.0", default-features = true, features = ["only_i32", "f32_float", "sync"] }
rand = "0.8.5"
strum = "0.25"
strum_macros = "0.25.0"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

# When building for Xcode

# [lib]
# name = "rustapi"
# crate-type = ["staticlib"]

[package.metadata.bundle]
name = "Shape-Z"
identifier = "com.moenig.shapez"
icon = ["build/logo.png"]
copyright = "Copyright (c) Markus Moenig 2022. All rights reserved."
category = "Game"
short_description = "A procedural voxel editor."
long_description = """
A procedural voxel editor which will allow the creation of pixel art
and realistic renderings based on script based tools which utilize SDF shapes.
"""
